# EscapeTimeFractalGenerator

./: .gitmodules  README.md
EscapeTimeFractalGenerator/: CMakeLists.txt  EscapeTimeFractalGenerator.sln  README.md
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/: CMakeLists.txt  ComplexFloat.cpp  ComplexFloat.h  ComplexFractal.cpp  ComplexFractal.h  EscapeTimeFractal.cpp  EscapeTimeFractal.h  EscapeTimeFractalGenerator.vcxproj  EscapeTimeFractalGenerator.vcxproj.filters  FractalCommandDelegates.cpp  FractalCommandDelegates.h  FractalCommandList.cpp  FractalCommandList.h  FractalCommandListBuilder.cpp  FractalCommandListBuilder.h  FractalCommandListExecutor.cpp  FractalCommandListExecutor.h  FractalCommandListValidator.cpp  FractalCommandListValidator.h  FractalCommandListValidatorTestMatrixes.h  FractalCommandTree.h  FractalDictionary.cpp  FractalDictionary.h  FractalDrawer.cpp  FractalDrawer.h  FractalFourier.cpp  FractalFourier.h  FractalInterpreter.cpp  FractalInterpreter.h  FractalSmoothZoomer.cpp  FractalSmoothZoomer.h  HammerslySequence.cpp  HammerslySequence.h  JuliaFractal.cpp  JuliaFractal.h  MandelbrotFractal.cpp  MandelbrotFractal.h  QuadDrawer.cpp  QuadDrawer.h  RecursiveFunctor.h  (+6 more)
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/Debug/: vc142.idb
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/Debug/EscapeTi.cabcfc56.tlog/: EscapeTimeFractalGenerator.lastbuildstate
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/x64/Debug/: EscapeTimeFractalGenerator.exe.recipe  EscapeTimeFractalGenerator.ilk  main.obj.enc  vc142.idb
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/x64/Debug/EscapeTi.cabcfc56.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EscapeTimeFractalGenerator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/x64/Release/: EscapeTimeFractalGenerator.exe.recipe  EscapeTimeFractalGenerator.iobj  EscapeTimeFractalGenerator.ipdb
EscapeTimeFractalGenerator/EscapeTimeFractalGenerator/x64/Release/EscapeTi.cabcfc56.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EscapeTimeFractalGenerator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EscapeTimeFractalGenerator/lib/: .gitignore  CMakeLists.txt
